add exception, Dto, Stream, code refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.username=postgres
 spring.datasource.password=s$cret
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#Get error message in exception
+server.error.include-message = always
